# Mobile-Robots-ROS-Gazebo

./: CMakeLists.txt  README.md  map1.world  map2.world  orderLaunching  point.m
EKF-Robot-Diferencial-Matlab/: Derivada_simbolica.m  Diagrama-Flujo.pptx  KALMAN_MATRIX.m  KF.m  Robot.m  Robot_Simulink_Continous.slx  Robot_Simulink_Continous.slxc  Robot_Simulink_Continuous.slxc  Robot_Simulink_Discrete.slx  Robot_Simulink_Discrete.slxc  robot_diferencial.m  simulacion_continuo.m  simulacion_discreto.m
EKF-Robot-Diferencial-Matlab/Imagenes/: Graficas.pptx
MATLAB files/: calculatePath.m  callbackMOVEMENT.m  callbackPOSITION.m  checkLimits.m  freePath.m  limit.m
Planning-python/: README.md
Planning-python/MODULOS/: application.py
Planning-python/Maps/: map7.csv
Planning/Interface/: interface.py
Planning/MEMORIA/: memoria.tex
Planning/MODULOS/: algorithms.py  classes.py  constants.py
Planning/main/: Main.py
catkin_ws/: README_RUN.txt
catkin_ws/devel/include/robots_moviles_package/: msg1_pose.h  posicion.h  posicionRequest.h  (+4 more)
catkin_ws/src/robots_moviles_package/: CMakeLists.txt
catkin_ws/src/robots_moviles_package/msg/: msg1_pose.msg
catkin_ws/src/robots_moviles_package/src/: mover_robot.cpp
catkin_ws/src/sesionesPlanning/: CMakeLists.txt
launch/: planning.launch
maps_saved/: my_map.pgm  my_map.yaml
sesionesPlanning/: CMakeLists.txt
sesionesPlanning/src/: assembling_clouds.cpp
src/: detectObstacles.cpp  execute_plan.cpp  moving_detecting_obstacles.cpp  mueverobot_apunto.cpp  publish_goal.cpp  publish_initial_position.cpp  readMap.cpp
(+108 files in other folders)
